# Production-Ready-RAG

./: .env.example  Dockerfile  README.md  constants.py  custom_types.py  data_loader.py  docker-compose.yml  gemini-test.py  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh  vector_db.py
qdrant_storage/: raft_state.json
